exports[`prefer-simplified-conditions > invalid(1): !(foo! && bar) 1`] = `

Options:
- negatedConditions: 'expand'

Code:
  1 | !(foo! && bar)

`;

exports[`prefer-simplified-conditions > invalid(1): !(foo! && bar) 2`] = `

Message:
> 1 | !(foo! && bar)
    | ^^^^^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | !(foo!) || !bar

`;

exports[`prefer-simplified-conditions > invalid(1): const element = <div>{!(a && b)}</div>; 1`] = `

Options:
- negatedConditions: 'expand'

Code:
  1 | const element = <div>{!(a && b)}</div>;

`;

exports[`prefer-simplified-conditions > invalid(1): const element = <div>{!(a && b)}</div>; 2`] = `

Message:
> 1 | const element = <div>{!(a && b)}</div>;
    |                       ^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | const element = <div>{!a || !b}</div>;

`;

exports[`prefer-simplified-conditions > invalid(1): declare const a: boolean; const value = !(!a && b); 1`] = `

Options:
- negatedConditions: 'expand'

Code:
  1 | declare const a: boolean; const value = !(!a && b);

`;

exports[`prefer-simplified-conditions > invalid(1): declare const a: boolean; const value = !(!a && b); 2`] = `

Message:
> 1 | declare const a: boolean; const value = !(!a && b);
    |                                         ^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | declare const a: boolean; const value = a || !b;

`;

exports[`prefer-simplified-conditions > invalid(1): if (!(!a && !b)) {} 1`] = `

  1 | if (!(!a && !b)) {}

`;

exports[`prefer-simplified-conditions > invalid(1): if (!(!a && !b)) {} 2`] = `

Message:
> 1 | if (!(!a && !b)) {}
    |     ^^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | if (a || b) {}

`;

exports[`prefer-simplified-conditions > invalid(1): if (!(loggedInUser && isWebPage())) {} 1`] = `

Options:
- negatedConditions: 'expand'

Code:
  1 | if (!(loggedInUser && isWebPage())) {}

`;

exports[`prefer-simplified-conditions > invalid(1): if (!(loggedInUser && isWebPage())) {} 2`] = `

Message:
> 1 | if (!(loggedInUser && isWebPage())) {}
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | if (!loggedInUser || !isWebPage()) {}

`;

exports[`prefer-simplified-conditions > invalid(10): const value = !(!a || b); 1`] = `

Options:
- negatedConditions: 'expand'

Code:
  1 | const value = !(!a || b);

`;

exports[`prefer-simplified-conditions > invalid(10): const value = !(!a || b); 2`] = `

Message:
> 1 | const value = !(!a || b);
    |               ^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | const value = !!a && !b;

`;

exports[`prefer-simplified-conditions > invalid(10): if (a || (a && b)) {} 1`] = `

  1 | if (a || (a && b)) {}

`;

exports[`prefer-simplified-conditions > invalid(10): if (a || (a && b)) {} 2`] = `

Message:
> 1 | if (a || (a && b)) {}
    |     ^^^^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | if (a) {}

`;

exports[`prefer-simplified-conditions > invalid(11): if (!(!a && b)) {} 1`] = `

Options:
- negatedConditions: 'expand'

Code:
  1 | if (!(!a && b)) {}

`;

exports[`prefer-simplified-conditions > invalid(11): if (!(!a && b)) {} 2`] = `

Message:
> 1 | if (!(!a && b)) {}
    |     ^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | if (a || !b) {}

`;

exports[`prefer-simplified-conditions > invalid(11): if (a || (a && b /* comment */)) {} 1`] = `

  1 | if (a || (a && b /* comment */)) {}

`;

exports[`prefer-simplified-conditions > invalid(11): if (a || (a && b /* comment */)) {} 2`] = `

Message:
> 1 | if (a || (a && b /* comment */)) {}
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a simplified condition.

`;

exports[`prefer-simplified-conditions > invalid(12): !(a === b && c === d) 1`] = `

Options:
- negatedConditions: 'expand'

Code:
  1 | !(a === b && c === d)

`;

exports[`prefer-simplified-conditions > invalid(12): !(a === b && c === d) 2`] = `

Message:
> 1 | !(a === b && c === d)
    | ^^^^^^^^^^^^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | a !== b || c !== d

`;

exports[`prefer-simplified-conditions > invalid(12): if (a && (a || b)) {} 1`] = `

  1 | if (a && (a || b)) {}

`;

exports[`prefer-simplified-conditions > invalid(12): if (a && (a || b)) {} 2`] = `

Message:
> 1 | if (a && (a || b)) {}
    |     ^^^^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | if (a) {}

`;

exports[`prefer-simplified-conditions > invalid(13): !(a == b || c != d) 1`] = `

Options:
- negatedConditions: 'expand'

Code:
  1 | !(a == b || c != d)

`;

exports[`prefer-simplified-conditions > invalid(13): !(a == b || c != d) 2`] = `

Message:
> 1 | !(a == b || c != d)
    | ^^^^^^^^^^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | a != b && c == d

`;

exports[`prefer-simplified-conditions > invalid(13): const value = a || (a && b); 1`] = `

  1 | const value = a || (a && b);

`;

exports[`prefer-simplified-conditions > invalid(13): const value = a || (a && b); 2`] = `

Message:
> 1 | const value = a || (a && b);
    |               ^^^^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | const value = a;

`;

exports[`prefer-simplified-conditions > invalid(14): !(min <= value && value <= max) 1`] = `

Options:
- negatedConditions: 'expand'

Code:
  1 | !(min <= value && value <= max)

`;

exports[`prefer-simplified-conditions > invalid(14): !(min <= value && value <= max) 2`] = `

Message:
> 1 | !(min <= value && value <= max)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | !(min <= value) || !(value <= max)

`;

exports[`prefer-simplified-conditions > invalid(14): function foo(a, b) { return(a || (a && b)); } 1`] = `

  1 | function foo(a, b) { return(a || (a && b)); }

`;

exports[`prefer-simplified-conditions > invalid(14): function foo(a, b) { return(a || (a && b)); } 2`] = `

Message:
> 1 | function foo(a, b) { return(a || (a && b)); }
    |                             ^^^^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | function foo(a, b) { return (a); }

`;

exports[`prefer-simplified-conditions > invalid(15): !(a?.b && foo?.()) 1`] = `

Options:
- negatedConditions: 'expand'

Code:
  1 | !(a?.b && foo?.())

`;

exports[`prefer-simplified-conditions > invalid(15): !(a?.b && foo?.()) 2`] = `

Message:
> 1 | !(a?.b && foo?.())
    | ^^^^^^^^^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | !a?.b || !foo?.()

`;

exports[`prefer-simplified-conditions > invalid(15): function foo(a, b) { throw(a || (a && b)); } 1`] = `

  1 | function foo(a, b) { throw(a || (a && b)); }

`;

exports[`prefer-simplified-conditions > invalid(15): function foo(a, b) { throw(a || (a && b)); } 2`] = `

Message:
> 1 | function foo(a, b) { throw(a || (a && b)); }
    |                            ^^^^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | function foo(a, b) { throw (a); }

`;

exports[`prefer-simplified-conditions > invalid(16): !((a ?? b) && c) 1`] = `

Options:
- negatedConditions: 'expand'

Code:
  1 | !((a ?? b) && c)

`;

exports[`prefer-simplified-conditions > invalid(16): !((a ?? b) && c) 2`] = `

Message:
> 1 | !((a ?? b) && c)
    | ^^^^^^^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | !(a ?? b) || !c

`;

exports[`prefer-simplified-conditions > invalid(16): if ((a && true) || a) {} 1`] = `

  1 | if ((a && true) || a) {}

`;

exports[`prefer-simplified-conditions > invalid(16): if ((a && true) || a) {} 2`] = `

Message:
> 1 | if ((a && true) || a) {}
    |     ^^^^^^^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | if (a) {}

`;

exports[`prefer-simplified-conditions > invalid(17): !(a && b) ?? c 1`] = `

Options:
- negatedConditions: 'expand'

Code:
  1 | !(a && b) ?? c

`;

exports[`prefer-simplified-conditions > invalid(17): !(a && b) ?? c 2`] = `

Message:
> 1 | !(a && b) ?? c
    | ^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | (!a || !b) ?? c

`;

exports[`prefer-simplified-conditions > invalid(17): function foo(a, b) { if ((a && b) || a) {} } 1`] = `

  1 | function foo(a, b) { if ((a && b) || a) {} }

`;

exports[`prefer-simplified-conditions > invalid(17): function foo(a, b) { if ((a && b) || a) {} } 2`] = `

Message:
> 1 | function foo(a, b) { if ((a && b) || a) {} }
    |                          ^^^^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | function foo(a, b) { if (a) {} }

`;

exports[`prefer-simplified-conditions > invalid(18): c ?? !(a || b) 1`] = `

Options:
- negatedConditions: 'expand'

Code:
  1 | c ?? !(a || b)

`;

exports[`prefer-simplified-conditions > invalid(18): c ?? !(a || b) 2`] = `

Message:
> 1 | c ?? !(a || b)
    |      ^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | c ?? (!a && !b)

`;

exports[`prefer-simplified-conditions > invalid(18): function foo(a, b) { if ((b && a) || a) {} } 1`] = `

  1 | function foo(a, b) { if ((b && a) || a) {} }

`;

exports[`prefer-simplified-conditions > invalid(18): function foo(a, b) { if ((b && a) || a) {} } 2`] = `

Message:
> 1 | function foo(a, b) { if ((b && a) || a) {} }
    |                          ^^^^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | function foo(a, b) { if (a) {} }

`;

exports[`prefer-simplified-conditions > invalid(19): !(a && (b ? c : d)) 1`] = `

Options:
- negatedConditions: 'expand'

Code:
  1 | !(a && (b ? c : d))

`;

exports[`prefer-simplified-conditions > invalid(19): !(a && (b ? c : d)) 2`] = `

Message:
> 1 | !(a && (b ? c : d))
    | ^^^^^^^^^^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | !a || !(b ? c : d)

`;

exports[`prefer-simplified-conditions > invalid(19): function foo(a, b) { if (a || (b && a)) {} } 1`] = `

  1 | function foo(a, b) { if (a || (b && a)) {} }

`;

exports[`prefer-simplified-conditions > invalid(19): function foo(a, b) { if (a || (b && a)) {} } 2`] = `

Message:
> 1 | function foo(a, b) { if (a || (b && a)) {} }
    |                          ^^^^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | function foo(a, b) { if (a) {} }

`;

exports[`prefer-simplified-conditions > invalid(2): !((foo as string) && bar) 1`] = `

Options:
- negatedConditions: 'expand'

Code:
  1 | !((foo as string) && bar)

`;

exports[`prefer-simplified-conditions > invalid(2): !((foo as string) && bar) 2`] = `

Message:
> 1 | !((foo as string) && bar)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | !(foo as string) || !bar

`;

exports[`prefer-simplified-conditions > invalid(2): !(a && b) 1`] = `

Options:
- negatedConditions: 'expand'

Code:
  1 | !(a && b)

`;

exports[`prefer-simplified-conditions > invalid(2): !(a && b) 2`] = `

Message:
> 1 | !(a && b)
    | ^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | !a || !b

`;

exports[`prefer-simplified-conditions > invalid(2): declare const flags: {a: boolean}; const value = !(!flags.a || b); 1`] = `

Filename: file.ts

Options:
- negatedConditions: 'expand'

Code:
  1 | declare const flags: {a: boolean}; const value = !(!flags.a || b);

`;

exports[`prefer-simplified-conditions > invalid(2): declare const flags: {a: boolean}; const value = !(!flags.a || b); 2`] = `

Message:
> 1 | declare const flags: {a: boolean}; const value = !(!flags.a || b);
    |                                                  ^^^^^^^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | declare const flags: {a: boolean}; const value = flags.a && !b;

`;

exports[`prefer-simplified-conditions > invalid(2): if (!(!a && b)) {} 1`] = `

  1 | if (!(!a && b)) {}

`;

exports[`prefer-simplified-conditions > invalid(2): if (!(!a && b)) {} 2`] = `

Message:
> 1 | if (!(!a && b)) {}
    |     ^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | if (a || !b) {}

`;

exports[`prefer-simplified-conditions > invalid(20): !(a && (b = c)) 1`] = `

Options:
- negatedConditions: 'expand'

Code:
  1 | !(a && (b = c))

`;

exports[`prefer-simplified-conditions > invalid(20): !(a && (b = c)) 2`] = `

Message:
> 1 | !(a && (b = c))
    | ^^^^^^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | !a || !(b = c)

`;

exports[`prefer-simplified-conditions > invalid(20): function foo(a, b) { if ((a || b) && a) {} } 1`] = `

  1 | function foo(a, b) { if ((a || b) && a) {} }

`;

exports[`prefer-simplified-conditions > invalid(20): function foo(a, b) { if ((a || b) && a) {} } 2`] = `

Message:
> 1 | function foo(a, b) { if ((a || b) && a) {} }
    |                          ^^^^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | function foo(a, b) { if (a) {} }

`;

exports[`prefer-simplified-conditions > invalid(21): !(a && (b, c)) 1`] = `

Options:
- negatedConditions: 'expand'

Code:
  1 | !(a && (b, c))

`;

exports[`prefer-simplified-conditions > invalid(21): !(a && (b, c)) 2`] = `

Message:
> 1 | !(a && (b, c))
    | ^^^^^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | !a || !(b, c)

`;

exports[`prefer-simplified-conditions > invalid(21): function foo(a, b) { if (a && (b || a)) {} } 1`] = `

  1 | function foo(a, b) { if (a && (b || a)) {} }

`;

exports[`prefer-simplified-conditions > invalid(21): function foo(a, b) { if (a && (b || a)) {} } 2`] = `

Message:
> 1 | function foo(a, b) { if (a && (b || a)) {} }
    |                          ^^^^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | function foo(a, b) { if (a) {} }

`;

exports[`prefer-simplified-conditions > invalid(22): !(a && (() => b)) 1`] = `

Options:
- negatedConditions: 'expand'

Code:
  1 | !(a && (() => b))

`;

exports[`prefer-simplified-conditions > invalid(22): !(a && (() => b)) 2`] = `

Message:
> 1 | !(a && (() => b))
    | ^^^^^^^^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | !a || !(() => b)

`;

exports[`prefer-simplified-conditions > invalid(22): function foo(a) { var b; if ((b && a) || a) {} } 1`] = `

  1 | function foo(a) { var b; if ((b && a) || a) {} }

`;

exports[`prefer-simplified-conditions > invalid(22): function foo(a) { var b; if ((b && a) || a) {} } 2`] = `

Message:
> 1 | function foo(a) { var b; if ((b && a) || a) {} }
    |                              ^^^^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | function foo(a) { var b; if (a) {} }

`;

exports[`prefer-simplified-conditions > invalid(23): function* foo() { return !(a && (yield b)); } 1`] = `

Options:
- negatedConditions: 'expand'

Code:
  1 | function* foo() { return !(a && (yield b)); }

`;

exports[`prefer-simplified-conditions > invalid(23): function* foo() { return !(a && (yield b)); } 2`] = `

Message:
> 1 | function* foo() { return !(a && (yield b)); }
    |                          ^^^^^^^^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | function* foo() { return !a || !(yield b); }

`;

exports[`prefer-simplified-conditions > invalid(23): if ((a && b) || (a && c)) {} 1`] = `

  1 | if ((a && b) || (a && c)) {}

`;

exports[`prefer-simplified-conditions > invalid(23): if ((a && b) || (a && c)) {} 2`] = `

Message:
> 1 | if ((a && b) || (a && c)) {}
    |     ^^^^^^^^^^^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | if (a && (b || c)) {}

`;

exports[`prefer-simplified-conditions > invalid(24): function foo() { return!\n(a && b); } 1`] = `

Options:
- negatedConditions: 'expand'

Code:
  1 | function foo() { return!
  2 | (a && b); }

`;

exports[`prefer-simplified-conditions > invalid(24): function foo() { return!\n(a && b); } 2`] = `

Message:
> 1 | function foo() { return!
    |                        ^
> 2 | (a && b); }
    | ^^^^^^^^ Prefer a simplified condition.

Output:
  1 | function foo() { return (!a || !b); }

`;

exports[`prefer-simplified-conditions > invalid(24): function foo() { return(a === true && b === true) || (a === true && c === true); } 1`] = `

  1 | function foo() { return(a === true && b === true) || (a === true && c === true); }

`;

exports[`prefer-simplified-conditions > invalid(24): function foo() { return(a === true && b === true) || (a === true && c === true); } 2`] = `

Message:
> 1 | function foo() { return(a === true && b === true) || (a === true && c === true); }
    |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | function foo() { return a === true && (b === true || c === true); }

`;

exports[`prefer-simplified-conditions > invalid(25): function foo() { throw!\r\n(a || b); } 1`] = `

Options:
- negatedConditions: 'expand'

Code:
  1 | function foo() { throw!
  2 | (a || b); }

`;

exports[`prefer-simplified-conditions > invalid(25): function foo() { throw!\r\n(a || b); } 2`] = `

Message:
> 1 | function foo() { throw!
    |                       ^
> 2 | (a || b); }
    | ^^^^^^^^ Prefer a simplified condition.

Output:
  1 | function foo() { throw (!a && !b); }

`;

exports[`prefer-simplified-conditions > invalid(25): function foo() { throw(a === true && b === true) || (a === true && c === true); } 1`] = `

  1 | function foo() { throw(a === true && b === true) || (a === true && c === true); }

`;

exports[`prefer-simplified-conditions > invalid(25): function foo() { throw(a === true && b === true) || (a === true && c === true); } 2`] = `

Message:
> 1 | function foo() { throw(a === true && b === true) || (a === true && c === true); }
    |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | function foo() { throw a === true && (b === true || c === true); }

`;

exports[`prefer-simplified-conditions > invalid(26): function foo() {\r\n  return !(a && b);\r\n} 1`] = `

Options:
- negatedConditions: 'expand'

Code:
  1 | function foo() {
  2 |   return !(a && b);
  3 | }

`;

exports[`prefer-simplified-conditions > invalid(26): function foo() {\r\n  return !(a && b);\r\n} 2`] = `

Message:
  1 | function foo() {
> 2 |   return !(a && b);
    |          ^^^^^^^^^ Prefer a simplified condition.
  3 | }

Output:
  1 | function foo() {
  2 |   return !a || !b;
  3 | }

`;

exports[`prefer-simplified-conditions > invalid(26): if ((a && b /* comment */) || (a && c)) {} 1`] = `

  1 | if ((a && b /* comment */) || (a && c)) {}

`;

exports[`prefer-simplified-conditions > invalid(26): if ((a && b /* comment */) || (a && c)) {} 2`] = `

Message:
> 1 | if ((a && b /* comment */) || (a && c)) {}
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a simplified condition.

`;

exports[`prefer-simplified-conditions > invalid(27): !(a && b) && c 1`] = `

Options:
- negatedConditions: 'expand'

Code:
  1 | !(a && b) && c

`;

exports[`prefer-simplified-conditions > invalid(27): !(a && b) && c 2`] = `

Message:
> 1 | !(a && b) && c
    | ^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | (!a || !b) && c

`;

exports[`prefer-simplified-conditions > invalid(27): if ((Array.isArray(value) && a) || (Array.isArray(value) && b)) {} 1`] = `

  1 | if ((Array.isArray(value) && a) || (Array.isArray(value) && b)) {}

`;

exports[`prefer-simplified-conditions > invalid(27): if ((Array.isArray(value) && a) || (Array.isArray(value) && b)) {} 2`] = `

Message:
> 1 | if ((Array.isArray(value) && a) || (Array.isArray(value) && b)) {}
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | if (Array.isArray(value) && (a || b)) {}

`;

exports[`prefer-simplified-conditions > invalid(28): const value = !(a && b) === c; 1`] = `

Options:
- negatedConditions: 'expand'

Code:
  1 | const value = !(a && b) === c;

`;

exports[`prefer-simplified-conditions > invalid(28): const value = !(a && b) === c; 2`] = `

Message:
> 1 | const value = !(a && b) === c;
    |               ^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | const value = (!a || !b) === c;

`;

exports[`prefer-simplified-conditions > invalid(28): if ((ArrayBuffer.isView(value) && a) || (ArrayBuffer.isView(value) && b)) {} 1`] = `

  1 | if ((ArrayBuffer.isView(value) && a) || (ArrayBuffer.isView(value) && b)) {}

`;

exports[`prefer-simplified-conditions > invalid(28): if ((ArrayBuffer.isView(value) && a) || (ArrayBuffer.isView(value) && b)) {} 2`] = `

Message:
> 1 | if ((ArrayBuffer.isView(value) && a) || (ArrayBuffer.isView(value) && b)) {}
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | if (ArrayBuffer.isView(value) && (a || b)) {}

`;

exports[`prefer-simplified-conditions > invalid(29): async function foo() { await !(a && b); } 1`] = `

Options:
- negatedConditions: 'expand'

Code:
  1 | async function foo() { await !(a && b); }

`;

exports[`prefer-simplified-conditions > invalid(29): async function foo() { await !(a && b); } 2`] = `

Message:
> 1 | async function foo() { await !(a && b); }
    |                              ^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | async function foo() { await (!a || !b); }

`;

exports[`prefer-simplified-conditions > invalid(29): if ((Error.isError(value) && a) || (Error.isError(value) && b)) {} 1`] = `

  1 | if ((Error.isError(value) && a) || (Error.isError(value) && b)) {}

`;

exports[`prefer-simplified-conditions > invalid(29): if ((Error.isError(value) && a) || (Error.isError(value) && b)) {} 2`] = `

Message:
> 1 | if ((Error.isError(value) && a) || (Error.isError(value) && b)) {}
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | if (Error.isError(value) && (a || b)) {}

`;

exports[`prefer-simplified-conditions > invalid(3): !((foo satisfies string) && bar) 1`] = `

Options:
- negatedConditions: 'expand'

Code:
  1 | !((foo satisfies string) && bar)

`;

exports[`prefer-simplified-conditions > invalid(3): !((foo satisfies string) && bar) 2`] = `

Message:
> 1 | !((foo satisfies string) && bar)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | !(foo satisfies string) || !bar

`;

exports[`prefer-simplified-conditions > invalid(3): !(a || b) 1`] = `

Options:
- negatedConditions: 'expand'

Code:
  1 | !(a || b)

`;

exports[`prefer-simplified-conditions > invalid(3): !(a || b) 2`] = `

Message:
> 1 | !(a || b)
    | ^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | !a && !b

`;

exports[`prefer-simplified-conditions > invalid(3): while (!(!a && b)) {} 1`] = `

  1 | while (!(!a && b)) {}

`;

exports[`prefer-simplified-conditions > invalid(3): while (!(!a && b)) {} 2`] = `

Message:
> 1 | while (!(!a && b)) {}
    |        ^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | while (a || !b) {}

`;

exports[`prefer-simplified-conditions > invalid(30): (!(a && b)).toString(); 1`] = `

Options:
- negatedConditions: 'expand'

Code:
  1 | (!(a && b)).toString();

`;

exports[`prefer-simplified-conditions > invalid(30): (!(a && b)).toString(); 2`] = `

Message:
> 1 | (!(a && b)).toString();
    |  ^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | (!a || !b).toString();

`;

exports[`prefer-simplified-conditions > invalid(30): if ((Number.isFinite(value) && a) || (Number.isFinite(value) && b)) {} 1`] = `

  1 | if ((Number.isFinite(value) && a) || (Number.isFinite(value) && b)) {}

`;

exports[`prefer-simplified-conditions > invalid(30): if ((Number.isFinite(value) && a) || (Number.isFinite(value) && b)) {} 2`] = `

Message:
> 1 | if ((Number.isFinite(value) && a) || (Number.isFinite(value) && b)) {}
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | if (Number.isFinite(value) && (a || b)) {}

`;

exports[`prefer-simplified-conditions > invalid(31): !(a && b /* comment */) 1`] = `

Options:
- negatedConditions: 'expand'

Code:
  1 | !(a && b /* comment */)

`;

exports[`prefer-simplified-conditions > invalid(31): !(a && b /* comment */) 2`] = `

Message:
> 1 | !(a && b /* comment */)
    | ^^^^^^^^^^^^^^^^^^^^^^^ Prefer a simplified condition.

`;

exports[`prefer-simplified-conditions > invalid(31): if ((Number.isInteger(value) && a) || (Number.isInteger(value) && b)) {} 1`] = `

  1 | if ((Number.isInteger(value) && a) || (Number.isInteger(value) && b)) {}

`;

exports[`prefer-simplified-conditions > invalid(31): if ((Number.isInteger(value) && a) || (Number.isInteger(value) && b)) {} 2`] = `

Message:
> 1 | if ((Number.isInteger(value) && a) || (Number.isInteger(value) && b)) {}
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | if (Number.isInteger(value) && (a || b)) {}

`;

exports[`prefer-simplified-conditions > invalid(32): !/* comment */(a && b) 1`] = `

Options:
- negatedConditions: 'expand'

Code:
  1 | !/* comment */(a && b)

`;

exports[`prefer-simplified-conditions > invalid(32): !/* comment */(a && b) 2`] = `

Message:
> 1 | !/* comment */(a && b)
    | ^^^^^^^^^^^^^^^^^^^^^^ Prefer a simplified condition.

`;

exports[`prefer-simplified-conditions > invalid(32): if ((Number.isNaN(value) && a) || (Number.isNaN(value) && b)) {} 1`] = `

  1 | if ((Number.isNaN(value) && a) || (Number.isNaN(value) && b)) {}

`;

exports[`prefer-simplified-conditions > invalid(32): if ((Number.isNaN(value) && a) || (Number.isNaN(value) && b)) {} 2`] = `

Message:
> 1 | if ((Number.isNaN(value) && a) || (Number.isNaN(value) && b)) {}
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | if (Number.isNaN(value) && (a || b)) {}

`;

exports[`prefer-simplified-conditions > invalid(33): if ((Number.isSafeInteger(value) && a) || (Number.isSafeInteger(value) && b)) {} 1`] = `

  1 | if ((Number.isSafeInteger(value) && a) || (Number.isSafeInteger(value) && b)) {}

`;

exports[`prefer-simplified-conditions > invalid(33): if ((Number.isSafeInteger(value) && a) || (Number.isSafeInteger(value) && b)) {} 2`] = `

Message:
> 1 | if ((Number.isSafeInteger(value) && a) || (Number.isSafeInteger(value) && b)) {}
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | if (Number.isSafeInteger(value) && (a || b)) {}

`;

exports[`prefer-simplified-conditions > invalid(34): if ((c || a) && (c || b)) {} 1`] = `

  1 | if ((c || a) && (c || b)) {}

`;

exports[`prefer-simplified-conditions > invalid(34): if ((c || a) && (c || b)) {} 2`] = `

Message:
> 1 | if ((c || a) && (c || b)) {}
    |     ^^^^^^^^^^^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | if (c || (a && b)) {}

`;

exports[`prefer-simplified-conditions > invalid(35): if (((c || a) && (c || b)) && d) {} 1`] = `

  1 | if (((c || a) && (c || b)) && d) {}

`;

exports[`prefer-simplified-conditions > invalid(35): if (((c || a) && (c || b)) && d) {} 2`] = `

Message:
> 1 | if (((c || a) && (c || b)) && d) {}
    |      ^^^^^^^^^^^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | if ((c || (a && b)) && d) {}

`;

exports[`prefer-simplified-conditions > invalid(36): Boolean((a && b) || (a && c)) 1`] = `

  1 | Boolean((a && b) || (a && c))

`;

exports[`prefer-simplified-conditions > invalid(36): Boolean((a && b) || (a && c)) 2`] = `

Message:
> 1 | Boolean((a && b) || (a && c))
    |         ^^^^^^^^^^^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | Boolean(a && (b || c))

`;

exports[`prefer-simplified-conditions > invalid(37): const value = (a === true && b === true) || (a === true && c === true); 1`] = `

  1 | const value = (a === true && b === true) || (a === true && c === true);

`;

exports[`prefer-simplified-conditions > invalid(37): const value = (a === true && b === true) || (a === true && c === true); 2`] = `

Message:
> 1 | const value = (a === true && b === true) || (a === true && c === true);
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | const value = a === true && (b === true || c === true);

`;

exports[`prefer-simplified-conditions > invalid(38): const value = (Array.isArray(value) && a === true) || (Array.isArray(value) && b === true); 1`] = `

  1 | const value = (Array.isArray(value) && a === true) || (Array.isArray(value) && b === true);

`;

exports[`prefer-simplified-conditions > invalid(38): const value = (Array.isArray(value) && a === true) || (Array.isArray(value) && b === true); 2`] = `

Message:
> 1 | const value = (Array.isArray(value) && a === true) || (Array.isArray(value) && b === true);
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | const value = Array.isArray(value) && (a === true || b === true);

`;

exports[`prefer-simplified-conditions > invalid(39): const value = (Error.isError(value) && a === true) || (Error.isError(value) && b === true); 1`] = `

  1 | const value = (Error.isError(value) && a === true) || (Error.isError(value) && b === true);

`;

exports[`prefer-simplified-conditions > invalid(39): const value = (Error.isError(value) && a === true) || (Error.isError(value) && b === true); 2`] = `

Message:
> 1 | const value = (Error.isError(value) && a === true) || (Error.isError(value) && b === true);
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | const value = Error.isError(value) && (a === true || b === true);

`;

exports[`prefer-simplified-conditions > invalid(4): !(<string>foo && bar) 1`] = `

Options:
- negatedConditions: 'expand'

Code:
  1 | !(<string>foo && bar)

`;

exports[`prefer-simplified-conditions > invalid(4): !(<string>foo && bar) 2`] = `

Message:
> 1 | !(<string>foo && bar)
    | ^^^^^^^^^^^^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | !(<string>foo) || !bar

`;

exports[`prefer-simplified-conditions > invalid(4): !(a && b && c) 1`] = `

Options:
- negatedConditions: 'expand'

Code:
  1 | !(a && b && c)

`;

exports[`prefer-simplified-conditions > invalid(4): !(a && b && c) 2`] = `

Message:
> 1 | !(a && b && c)
    | ^^^^^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | !(a && b) || !c

`;

exports[`prefer-simplified-conditions > invalid(4): if (!(!a && !b && !c)) {} 1`] = `

  1 | if (!(!a && !b && !c)) {}

`;

exports[`prefer-simplified-conditions > invalid(4): if (!(!a && !b && !c)) {} 2`] = `

Message:
> 1 | if (!(!a && !b && !c)) {}
    |     ^^^^^^^^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | if (!(!a && !b) || c) {}

`;

exports[`prefer-simplified-conditions > invalid(40): const value = (Number.isInteger(value) && a === true) || (Number.isInteger(value) && b === true); 1`] = `

  1 | const value = (Number.isInteger(value) && a === true) || (Number.isInteger(value) && b === true);

`;

exports[`prefer-simplified-conditions > invalid(40): const value = (Number.isInteger(value) && a === true) || (Number.isInteger(value) && b === true); 2`] = `

Message:
> 1 | const value = (Number.isInteger(value) && a === true) || (Number.isInteger(value) && b === true);
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | const value = Number.isInteger(value) && (a === true || b === true);

`;

exports[`prefer-simplified-conditions > invalid(41): declare const a: boolean; declare const b: boolean; declare const c: boolean; const value = (a && b) || (a && c); 1`] = `

  1 | declare const a: boolean; declare const b: boolean; declare const c: boolean; const value = (a && b) || (a && c);

`;

exports[`prefer-simplified-conditions > invalid(41): declare const a: boolean; declare const b: boolean; declare const c: boolean; const value = (a && b) || (a && c); 2`] = `

Message:
> 1 | declare const a: boolean; declare const b: boolean; declare const c: boolean; const value = (a && b) || (a && c);
    |                                                                                             ^^^^^^^^^^^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | declare const a: boolean; declare const b: boolean; declare const c: boolean; const value = a && (b || c);

`;

exports[`prefer-simplified-conditions > invalid(42): function foo(a: boolean, b: boolean) { const value = (a && b) || a; } 1`] = `

  1 | function foo(a: boolean, b: boolean) { const value = (a && b) || a; }

`;

exports[`prefer-simplified-conditions > invalid(42): function foo(a: boolean, b: boolean) { const value = (a && b) || a; } 2`] = `

Message:
> 1 | function foo(a: boolean, b: boolean) { const value = (a && b) || a; }
    |                                                      ^^^^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | function foo(a: boolean, b: boolean) { const value = a; }

`;

exports[`prefer-simplified-conditions > invalid(43): declare const flags: {a: boolean; b: boolean; c: boolean}; const a = flags.a; const b = flags.b; const c = flags.c; const value = (a && b) || (a && c); 1`] = `

Filename: file.ts

  1 | declare const flags: {a: boolean; b: boolean; c: boolean}; const a = flags.a; const b = flags.b; const c = flags.c; const value = (a && b) || (a && c);

`;

exports[`prefer-simplified-conditions > invalid(43): declare const flags: {a: boolean; b: boolean; c: boolean}; const a = flags.a; const b = flags.b; const c = flags.c; const value = (a && b) || (a && c); 2`] = `

Message:
> 1 | declare const flags: {a: boolean; b: boolean; c: boolean}; const a = flags.a; const b = flags.b; const c = flags.c; const value = (a && b) || (a && c);
    |                                                                                                                                   ^^^^^^^^^^^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | declare const flags: {a: boolean; b: boolean; c: boolean}; const a = flags.a; const b = flags.b; const c = flags.c; const value = a && (b || c);

`;

exports[`prefer-simplified-conditions > invalid(44): if (!(!(a || b) || !c)) {} 1`] = `

  1 | if (!(!(a || b) || !c)) {}

`;

exports[`prefer-simplified-conditions > invalid(44): if (!(!(a || b) || !c)) {} 2`] = `

Message:
> 1 | if (!(!(a || b) || !c)) {}
    |     ^^^^^^^^^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | if ((a || b) && c) {}

`;

exports[`prefer-simplified-conditions > invalid(45): function foo(a, b) { if (a || (!b && a)) {} } 1`] = `

  1 | function foo(a, b) { if (a || (!b && a)) {} }

`;

exports[`prefer-simplified-conditions > invalid(45): function foo(a, b) { if (a || (!b && a)) {} } 2`] = `

Message:
> 1 | function foo(a, b) { if (a || (!b && a)) {} }
    |                          ^^^^^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | function foo(a, b) { if (a) {} }

`;

exports[`prefer-simplified-conditions > invalid(46): if ((a !== b && c) || (a !== b && d)) {} 1`] = `

  1 | if ((a !== b && c) || (a !== b && d)) {}

`;

exports[`prefer-simplified-conditions > invalid(46): if ((a !== b && c) || (a !== b && d)) {} 2`] = `

Message:
> 1 | if ((a !== b && c) || (a !== b && d)) {}
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | if (a !== b && (c || d)) {}

`;

exports[`prefer-simplified-conditions > invalid(47): foo(!(a !== b && c !== d)); 1`] = `

  1 | foo(!(a !== b && c !== d));

`;

exports[`prefer-simplified-conditions > invalid(47): foo(!(a !== b && c !== d)); 2`] = `

Message:
> 1 | foo(!(a !== b && c !== d));
    |     ^^^^^^^^^^^^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | foo(a === b || c === d);

`;

exports[`prefer-simplified-conditions > invalid(48): foo[!(a !== b && c !== d)]; 1`] = `

  1 | foo[!(a !== b && c !== d)];

`;

exports[`prefer-simplified-conditions > invalid(48): foo[!(a !== b && c !== d)]; 2`] = `

Message:
> 1 | foo[!(a !== b && c !== d)];
    |     ^^^^^^^^^^^^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | foo[a === b || c === d];

`;

exports[`prefer-simplified-conditions > invalid(49): const value = !(a !== b && c !== d) as boolean; 1`] = `

  1 | const value = !(a !== b && c !== d) as boolean;

`;

exports[`prefer-simplified-conditions > invalid(49): const value = !(a !== b && c !== d) as boolean; 2`] = `

Message:
> 1 | const value = !(a !== b && c !== d) as boolean;
    |               ^^^^^^^^^^^^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | const value = (a === b || c === d) as boolean;

`;

exports[`prefer-simplified-conditions > invalid(5): !(a || b || c) 1`] = `

Options:
- negatedConditions: 'expand'

Code:
  1 | !(a || b || c)

`;

exports[`prefer-simplified-conditions > invalid(5): !(a || b || c) 2`] = `

Message:
> 1 | !(a || b || c)
    | ^^^^^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | !(a || b) && !c

`;

exports[`prefer-simplified-conditions > invalid(5): const value = (!(a && b)) as boolean; 1`] = `

Options:
- negatedConditions: 'expand'

Code:
  1 | const value = (!(a && b)) as boolean;

`;

exports[`prefer-simplified-conditions > invalid(5): const value = (!(a && b)) as boolean; 2`] = `

Message:
> 1 | const value = (!(a && b)) as boolean;
    |                ^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | const value = (!a || !b) as boolean;

`;

exports[`prefer-simplified-conditions > invalid(5): if (!(x !== undefined && y !== undefined)) {} 1`] = `

  1 | if (!(x !== undefined && y !== undefined)) {}

`;

exports[`prefer-simplified-conditions > invalid(5): if (!(x !== undefined && y !== undefined)) {} 2`] = `

Message:
> 1 | if (!(x !== undefined && y !== undefined)) {}
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | if (x === undefined || y === undefined) {}

`;

exports[`prefer-simplified-conditions > invalid(50): if ((a || (a && b))!) {} 1`] = `

  1 | if ((a || (a && b))!) {}

`;

exports[`prefer-simplified-conditions > invalid(50): if ((a || (a && b))!) {} 2`] = `

Message:
> 1 | if ((a || (a && b))!) {}
    |      ^^^^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | if ((a)!) {}

`;

exports[`prefer-simplified-conditions > invalid(51): if (((a) || (a && b))!) {} 1`] = `

  1 | if (((a) || (a && b))!) {}

`;

exports[`prefer-simplified-conditions > invalid(51): if (((a) || (a && b))!) {} 2`] = `

Message:
> 1 | if (((a) || (a && b))!) {}
    |      ^^^^^^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | if (((a))!) {}

`;

exports[`prefer-simplified-conditions > invalid(6): !(a && (b || c)) 1`] = `

Options:
- negatedConditions: 'expand'

Code:
  1 | !(a && (b || c))

`;

exports[`prefer-simplified-conditions > invalid(6): !(a && (b || c)) 2`] = `

Message:
> 1 | !(a && (b || c))
    | ^^^^^^^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | !a || !(b || c)

`;

exports[`prefer-simplified-conditions > invalid(6): if (!(key === \"y\" && !isEditable(target))) {} 1`] = `

  1 | if (!(key === "y" && !isEditable(target))) {}

`;

exports[`prefer-simplified-conditions > invalid(6): if (!(key === \"y\" && !isEditable(target))) {} 2`] = `

Message:
> 1 | if (!(key === "y" && !isEditable(target))) {}
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | if (key !== "y" || isEditable(target)) {}

`;

exports[`prefer-simplified-conditions > invalid(7): !(a || (b && c)) 1`] = `

Options:
- negatedConditions: 'expand'

Code:
  1 | !(a || (b && c))

`;

exports[`prefer-simplified-conditions > invalid(7): !(a || (b && c)) 2`] = `

Message:
> 1 | !(a || (b && c))
    | ^^^^^^^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | !a && !(b && c)

`;

exports[`prefer-simplified-conditions > invalid(7): !(key !== \"y\" || isEditable(target)) 1`] = `

  1 | !(key !== "y" || isEditable(target))

`;

exports[`prefer-simplified-conditions > invalid(7): !(key !== \"y\" || isEditable(target)) 2`] = `

Message:
> 1 | !(key !== "y" || isEditable(target))
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | key === "y" && !isEditable(target)

`;

exports[`prefer-simplified-conditions > invalid(8): !((a && b) || (a && c)) 1`] = `

Options:
- negatedConditions: 'expand'

Code:
  1 | !((a && b) || (a && c))

`;

exports[`prefer-simplified-conditions > invalid(8): !((a && b) || (a && c)) 2`] = `

Message:
> 1 | !((a && b) || (a && c))
    | ^^^^^^^^^^^^^^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | !(a && b) && !(a && c)

`;

exports[`prefer-simplified-conditions > invalid(8): !(a == b && c != d) 1`] = `

  1 | !(a == b && c != d)

`;

exports[`prefer-simplified-conditions > invalid(8): !(a == b && c != d) 2`] = `

Message:
> 1 | !(a == b && c != d)
    | ^^^^^^^^^^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | a != b || c == d

`;

exports[`prefer-simplified-conditions > invalid(9): const value = !(!a && b); 1`] = `

Options:
- negatedConditions: 'expand'

Code:
  1 | const value = !(!a && b);

`;

exports[`prefer-simplified-conditions > invalid(9): const value = !(!a && b); 2`] = `

Message:
> 1 | const value = !(!a && b);
    |               ^^^^^^^^^^ Prefer a simplified condition.

Output:
  1 | const value = !!a || !b;

`;

exports[`prefer-simplified-conditions > invalid(9): if (!(!a && b /* comment */)) {} 1`] = `

  1 | if (!(!a && b /* comment */)) {}

`;

exports[`prefer-simplified-conditions > invalid(9): if (!(!a && b /* comment */)) {} 2`] = `

Message:
> 1 | if (!(!a && b /* comment */)) {}
    |     ^^^^^^^^^^^^^^^^^^^^^^^^ Prefer a simplified condition.

`;
